XMLExper/m17/m17_9_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLAttribute::SetAttribute(int)’:
tinyxml2.cpp:1558:38: error: call of overloaded ‘ToStr(int&, char [200], tinyxml2::XMLAttribute::<unnamed enum>)’ is ambiguous
 1558 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:574:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  574 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLElement::SetText(int)’:
tinyxml2.cpp:1731:38: error: call of overloaded ‘ToStr(int&, char [200], tinyxml2::XMLElement::<unnamed enum>)’ is ambiguous
 1731 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:574:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  574 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushAttribute(const char*, int)’:
tinyxml2.cpp:2784:38: error: call of overloaded ‘ToStr(int&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2784 |     XMLUtil::ToStr( v, buf, BUF_SIZE );
      |                                      ^
tinyxml2.cpp:574:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  574 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp: In member function ‘void tinyxml2::XMLPrinter::PushText(int)’:
tinyxml2.cpp:2902:42: error: call of overloaded ‘ToStr(int&, char [200], tinyxml2::XMLPrinter::<unnamed enum>)’ is ambiguous
 2902 |     XMLUtil::ToStr( value, buf, BUF_SIZE );
      |                                          ^
tinyxml2.cpp:574:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(unsigned int, char*, int)’
  574 | void XMLUtil::ToStr( unsigned v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:580:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(bool, char*, int)’
  580 | void XMLUtil::ToStr( bool v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:589:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(float, char*, int)’
  589 | void XMLUtil::ToStr( float v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:595:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(double, char*, int)’
  595 | void XMLUtil::ToStr( double v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:601:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(int64_t, char*, int)’
  601 | void XMLUtil::ToStr( int64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
tinyxml2.cpp:607:6: note: candidate: ‘static void tinyxml2::XMLUtil::ToStr(uint64_t, char*, int)’
  607 | void XMLUtil::ToStr( uint64_t v, char* buffer, int bufferSize )
      |      ^~~~~~~
diff: tinyxml2.S: No such file or directory
